--- a/generators/exceptional/templates/public/stylesheets/exceptional.css
+++ b/generators/exceptional/templates/public/stylesheets/exceptional.css
@@ -1,18 +1,23 @@
-table {	
-    border-collapse: collapse;
-    width: 100%;
-}
+#exceptional { margin: 0px 20px }
 
-table tr { border-bottom: 1px solid #E0DFE0; }
-table th, table td { padding: 5px; }
-table th { text-align: left; }
+#exceptional_cap { padding-bottom: 10px; border-bottom: 1px solid #777; margin: 20px 0px; }
+#exceptional h2 { margin: 10px 0px; } 
 
-th#exception_location { width: 150px; }
-th#exception_summary {}
-th#exception_date { width: 150px; }
-th#exception_count { text-align: center; }
+#exceptional_nav { float: right }
+.exceptional_pagination { margin-top: 20px; }
 
-pre { font-size: 10px; color: #fff; background-color: #000; padding: 10px; font-family:Consolas, Monaco, 'Courier New', Courier,monospace; }
+#exceptional table { border-collapse: collapse; width: 100%; }
+#exceptional table tr { border-bottom: 1px solid #E0DFE0; }
+#exceptional table th, #exceptional table td { padding: 5px; }
+#exceptional table th { text-align: left; }
 
-#enviroment_information .toggle_data{ display: none; }
-#session_information .toggle_data{ display: none; }
+#exceptional th#exception_location { width: 150px; }
+#exceptional th#exception_date { width: 150px; }
+#exceptional th#exception_count { text-align: center; }
+
+#exceptional pre { -webkit-border-radius: 5; -moz-border-radius: 5; font-size: 10px; color: #fff; background-color: #222; padding: 10px; font-family: Consolas, Monaco, 'Courier New', Courier,monospace; }
+#exceptional a, #exceptional a:visited { text-decoration: underline; #bdf; } 
+#exceptional a:hover { #09f }
+
+.toggle_data { display: none }
+#backtrace_information .toggle_data { display: block; }
