--- a/generators/tartarus/templates/public/stylesheets/tartarus.css
+++ b/generators/tartarus/templates/public/stylesheets/tartarus.css
@@ -15,7 +15,7 @@
 #exceptional th#exception_date { width: 150px; }
 #exceptional th#exception_count { text-align: center; }
 
-#exceptional pre { -webkit-border-radius: 5; -moz-border-radius: 5; font-size: 10px; color: #fff; background-color: #222; padding: 10px; font-family: Consolas, Monaco, 'Courier New', Courier,monospace; }
+#exceptional pre { -webkit-border-radius: 5px; -moz-border-radius: 5px; font-size: 10px; color: #fff; background-color: #222; padding: 10px; font-family: Consolas, Monaco, 'Courier New', Courier,monospace; }
 #exceptional a, #exceptional a:visited { text-decoration: underline; #bdf; } 
 #exceptional a:hover { #09f }
 
