--- a/generators/tartarus/templates/app/views/exceptions/index.html.erb
+++ b/generators/tartarus/templates/app/views/exceptions/index.html.erb
@@ -1,13 +1,13 @@
-<div id="exceptional">
-  <div id="exceptional_cap">
-    <div id="exceptional_nav">
+<div id="tartarus">
+  <div id="tartarus_cap">
+    <div id="tartarus_nav">
       <a href="#">Remove all</a>
     </div>
     <h2>Exception Overview</h2>
     <div><%= @exceptions.length %> Exceptions</div>
   </div>
   
-  <table id="exceptional_overview">
+  <table id="tartarus_overview">
     <thead>
       <tr>
         <th id="exception_summary">Summary</th>
