logging_enabled is configuration is now loaded to see if logging should occur or not

--- a/generators/tartarus/templates/public/stylesheets/tartarus.css
+++ b/generators/tartarus/templates/public/stylesheets/tartarus.css
@@ -22,5 +22,5 @@
 #tartarus #exception { clear: both; }
 #tartarus #exception_actions { float: right; }
 
-.toggle_data { display: none }
-#backtrace_information .toggle_data { display: block; }
+#tartarus .toggle_data { display: none }
+#tartarus #backtrace_information .toggle_data { display: block; }
